welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	def tabColor(x:Int):Array[Color] = {
		var t = new Array[Int](x)
		for (i <- 0 to x-1) {
			T(i)=getCouleurSol();
			avance();
		}
		
	}
}
